tests/baselines/reference/callSignaturesShouldBeResolvedBeforeSpecialization.errors.txt
==== tests/cases/compiler/callSignaturesShouldBeResolvedBeforeSpecialization.ts (2 errors) ====
    interface I1<T> {
        (value: T): void;
        field1: I1<boolean>;
    }
    
    function foo() {
        var test: I1<string>;
        test("expects boolean instead of string"); // should not error - "test" should not expect a boolean
        test(true); // should error - string expected
        ~~~~
!!! callSignaturesShouldBeResolvedBeforeSpecialization.ts(9,5): error TS2082: Supplied parameters do not match any signature of call target:
!!! 	Could not apply type 'string' to argument 1 which is of type 'boolean'.
        ~~~~
!!! callSignaturesShouldBeResolvedBeforeSpecialization.ts(9,5): error TS2087: Could not select overload for 'call' expression.
    }